--- a/public/styles/styleGenerico.css
+++ b/public/styles/styleGenerico.css
@@ -112,6 +112,7 @@ html, body{
 
 #report{
   width: 70%;
+  transition: all 0.55s ease-in-out;
 }
 
 #like:hover{
@@ -177,3 +178,10 @@ button{
   font-size: calc(1vmax + 10px);
 }
 
+.Reportado img{
+  filter: invert(0%) !important;
+}
+
+.Reportado {
+  filter: invert(18%) sepia(74%) saturate(2693%) hue-rotate(344deg) brightness(81%) contrast(110%) 
+}
