--- a/public/styles/estiloUser.css
+++ b/public/styles/estiloUser.css
@@ -352,7 +352,7 @@ html{
 #boxCbPessoal{
     display: none;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 6.5vh);
 }
 
 #boxCbPessoalRanking{
