--- a/public/styles/appStyle.css
+++ b/public/styles/appStyle.css
@@ -160,9 +160,9 @@ body{
     display: none;
     z-index: 998;
     width: 40vw;
-    height: 40vh;
+    height: 60vh;
     border-radius: 3vmax;
-    padding: 5%;
+    padding: 2% 5% 5% 5%;
     padding-left: 2%;
     background-color: var(--shades-contrast);
     position: absolute;
@@ -176,9 +176,44 @@ body{
     margin-right: 2%;
 }
 
+#draftsUserIcon{
+    border-radius: 100%;
+    border: 2px solid white;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
+
 .DraftsInfo{
     display: flex;
-    height: 100%;
+    height: 70%;
+    padding-bottom: 2%;
+}
+
+.boxTopicos{
+    display: flex;
+}
+
+.Tópicos{
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    height: calc(0vmax + 50px);
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+}
+
+.topicoResult{
+    background-color: var(--main-brand);
+    border-radius: 20px;
+    width: 50%;
+    align-self: center;
+    text-align: center;
+}
+
+
+#topicoButton, #SelectTopicos {
+    margin-right: 2%;
 }
 
 [contenteditable=true]:empty:before{
@@ -189,14 +224,30 @@ body{
     display: block; /* For Firefox */
   }
 
-  .textarea {
+  .titulo{
+    display: flex;
+    justify-content: center;
+    margin-left: calc(3vmax + 40px + 2%);
+    padding-bottom: 2%;
+  }
+
+  #inputTitulo{
+    text-align: center;
+    justify-self: center;
+  }
+
+  #inputTitulo, .textarea{
     font-size: calc(0.5vmax + 15px);
+    background-color: transparent;
+    color: var(--light-shades);
+    border: 1px solid var(--main-brand);
+  }
+
+  .textarea {
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
     border: 1px solid var(--main-brand);
     resize: none;
-    background-color: transparent;
-    color: var(--light-shades);
     width: 80%;
     height: 100%;
   }
@@ -205,11 +256,7 @@ body{
     font-weight: 900;
 }
 
-.DraftsInfo{
-   height: 90%;
-  }
-
-.textarea::placeholder{
+.textarea::placeholder, #inputTitulo::placeholder{
     color: var(--main-brand)
   }
 
@@ -227,6 +274,9 @@ body{
 .botões{
     width: 100%;
     margin-top: 2%;
+    align-items: start;
+    display: flex;
+    text-align: start;
   }
 
 .botões .extra{
