--- a/public/styles/postStyle.css
+++ b/public/styles/postStyle.css
@@ -1,8 +1,172 @@
 :root{
-    --light-shades: #e8e8e8;
-    --light-accent: #e6b4b4;
-    --main-brand: #a01111;
-    --dark-accent: #360303;
-    --dark-shades: #212121;
-    --shades-contrast: #292929;
+  --light-shades: #e8e8e8;
+  --light-accent: #e6b4b4;
+  --main-brand: #a01111;
+  --dark-accent: #360303;
+  --dark-shades: #212121;
+  --shades-contrast: #292929;
+}
+
+body{
+  margin: 0;
+  background-color: var(--shades-contrast);
+}
+
+#centro{
+  height: fit-content;
+  width: calc(48vw + 30px);
+  margin: auto;
+}
+
+/* POST */
+
+#boxPost{
+  background-color: var(--main-brand);
+  padding-bottom: 0.3vh;
+  border-radius: 0 0 3vh 3vh;
+}
+
+/* capa */
+
+#divCapa{
+  width: 100%;
+  height: calc(17vh + 78px);
+  background-image: url(../images/DarkIcon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+/* INFORMAÇÕES POST*/
+#informacoesPost{
+  padding-top: 3%;
+  padding-left: 8%;
+  padding-right: 8%;
+  margin-bottom: 5%;
+}
+
+/* TÍTULO */
+#tituloContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--shades-contrast);
+}
+
+#titulo{
+  margin: 2%;
+  color: white;
+  font-size: 6vh;
+}
+
+/* informações do autor */
+.informacoes{
+  width: 100%;
+  margin-top: 1%;
+  display: flex;
+  height: 5vh;
+  background-color: #a01111;
+}
+
+#informacoesUser{
+  height: 7vh;
+  background-color: transparent;
+}
+
+#boxAutorAvatar{
+  padding: 1%;
+}
+
+.avatar{
+  border-radius: 100%;
+  border: 1px solid white;
+  height: 100%;
+  aspect-ratio: 1/1;
+  background: transparent; 
+}
+
+#nomeAutorPost{
+  font-size: 3vh;
+}
+
+.containerNome{
+  margin-left: 3%;
+  display: flex;
+  align-items: center;
+}
+
+/* Texto do Post */
+
+#boxTexto{
+  width: 93%;
+  background-color: #fff;
+  margin: auto;
+  min-height: 10%;
+  overflow-wrap: break-word;
+}
+
+#texto{
+  padding: 3%;
+  font-size: 17px;
+  text-align: justify;
+}
+
+/* COMENTÁRIOS */
+
+#boxComentarios{
+  height: 50vh;
+  background-color: aqua;
+  margin-top: 4vh;
+  border-radius: 3vh 3vh 0 0;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding-top: 7%;
+  gap: 5%;
+}
+
+.comentario{
+  width: 80%;
+  height: 50%;
+  background-color: #212121;
+}
+
+/*  */
+
+.boxComentarioAvatar{
+  padding: 1%;
+}
+
+.nomeAutorComentario{
+  font-size: 4vh;
+}
+
+/*  */
+
+.boxTextoComentario{
+  margin: auto;
+  width: 88%;
+  height: 90%;
+  background: aliceblue;
+}
+
+/* p */
+.textoComentario{
+
+}
+
+/*  */
+
+.BoxCurtidas{
+
+}
+
+
+
+@media(orientation: portrait){
+  #centro{
+    width: 100vw;
   }
+}
