--- a/public/styles/postStyle.css
+++ b/public/styles/postStyle.css
@@ -14,7 +14,7 @@ body{
 
 #centro{
   height: fit-content;
-  width: calc(48vw + 30px);
+  width: calc(50vw + 30px);
   margin: auto;
 }
 
@@ -65,7 +65,6 @@ body{
   margin-top: 1%;
   display: flex;
   height: 5vh;
-  background-color: #a01111;
 }
 
 #informacoesUser{
@@ -107,15 +106,14 @@ body{
 
 #texto{
   padding: 3%;
-  font-size: 17px;
+  font-size: calc(2vmin + 10px);
   text-align: justify;
 }
 
 /* COMENTÁRIOS */
 
 #boxComentarios{
-  height: 50vh;
-  background-color: aqua;
+  background-color: var(--main-brand);
   margin-top: 4vh;
   border-radius: 3vh 3vh 0 0;
   
@@ -124,13 +122,12 @@ body{
   align-items: center;
 
   padding-top: 7%;
-  gap: 5%;
+  padding-bottom: 3%;
+  gap: 2vh;
 }
 
 .comentario{
   width: 80%;
-  height: 50%;
-  background-color: #212121;
 }
 
 /*  */
@@ -147,20 +144,21 @@ body{
 
 .boxTextoComentario{
   margin: auto;
-  width: 88%;
-  height: 90%;
-  background: aliceblue;
+  background-color: var(--light-shades);
+  margin-bottom: calc(-3vh + 10px);
 }
 
 /* p */
-.textoComentario{
-
+.texto{
+  padding: 3%;
+  font-size: calc(1.8vmin + 9px);
+  text-align: justify;
 }
 
 /*  */
 
-.BoxCurtidas{
-
+.BoxCurtidasComentario{
+  height: 2vh;
 }
 
 
