--- a/public/styles/boxes.css
+++ b/public/styles/boxes.css
@@ -3,7 +3,7 @@
 #box{
     display: none;
     background-color: var(--shades-contrast);
-    position: absolute;
+    position: fixed;
     width: calc(35vw + 50px);
     height: calc(40vh + 70px);
     left: 50%;
