--- a/public/styles/estiloUser.css
+++ b/public/styles/estiloUser.css
@@ -244,7 +244,7 @@ html{
     width: 100%;
     height: 75%;
     margin: 0;
-    font-size: calc(5vh + 10px);
+    font-size: calc(2vmax + 10px);
 
     display: flex;
     align-items: center;
@@ -267,7 +267,7 @@ html{
     align-items: center;
     justify-content: center;
 
-    font-size: 3vh;
+    font-size: 2vh;
 }
 
 #pontos{
