--- a/public/styles/styleGenerico.css
+++ b/public/styles/styleGenerico.css
@@ -23,6 +23,8 @@ html, body{
 /* POSTS */
 
 .postResult{
+  position: relative;
+  overflow-y: auto;
   min-height: calc(5vmax + 100px);
   background-color: var(--light-shades);
   padding: 10px;
@@ -175,10 +177,6 @@ button{
   cursor: pointer;
   color: var(--light-shades);
   font-size: calc(1vmax + 10px);
-}
-
-.postResult{
-  position: relative;
 }
 
 .RemoverPostButton{
