--- a/public/styles/boxes.css
+++ b/public/styles/boxes.css
@@ -76,7 +76,7 @@
     font-weight: bolder;
 }
 
-#exitLogin:hover{
+#exitLogin:hover, #fecharDraft:hover{
     scale: 1.3;
     color: var(--main-brand);
 }
