--- a/public/styles/styleGenerico.css
+++ b/public/styles/styleGenerico.css
@@ -72,9 +72,9 @@ html, body{
 
 .postResult .capa{
   background-image: url('https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg');
-  background-size: cover; 
-  background-repeat: no-repeat; 
-  background-position: center center; 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
   height: calc(15vmax + 50px);
 }
 
